# simglucose_extension

./: .gitignore  API_REFERENCE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  tests.yml
examples/: README.md  basic_usage.py  custom_hr_source.py  demo_pid_hybrid.py  verify_patch_dynamics.py
experiments/: generate_batch_plots.py  thesis_batch_2307.py  thesis_bolus_before_exercise_2307.py  thesis_closed_loop_trial_2307.py  thesis_closed_loop_trial_2307_v2.py  thesis_plot_best_bolus_cases.py  thesis_plot_selected_2307.py  thesis_spoorc_lut_controller_demo.py
openaps_logic/: basal.py  bolus.py  iob.py
simglucose_ctx/: __init__.py  context.py  context_aware_openaps.py  env_wrapper.py  openaps_controller.py  sim_hook.py
tests/: test_context_aware_openaps.py  test_context_edge_cases.py  test_integration.py  test_openaps_logic.py
